# MyJWT

./: .codecov.yml  .coveragerc  .docstr.yaml  .flake8  .gitignore  .pre-commit-config.yaml  .pyup.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  Quality_check.py  README.md  dev-requirements.txt  dict.txt  jwk-python.json  jwks_with_x5c.json  lint-requirements.txt  main.py  myjwt_cli.py  private.pem  pyproject.toml  readthedocs.yml  requirements.txt  selfsigned.crt  setup.py  test.json  test_x5u_vulnerability.json  tox.ini  upload.php
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_issue.md  bug_report.md  enhancement-request.md  enhancement_request.md
.github/workflows/: extra.yml  lint.yml  publish.yml  unit_test.yml
MyJWT/: Exception.py  main.py  modifyJWT.py  myjwt_cli.py  utils.py  variables.py  vulnerabilities.py
docs/: requirements.txt
docs/source/: api.rst  changelog.md  conf.py  ctf.md  examples.md  exploit.md  exploits.md  index.rst  installation.md  installation_and_usage.md  installation_issues.md  usage.md
docs/source/_templates/: sidebar.html
examples/01-modify-jwt/: main.py  modify-jwt.py
examples/02-none-vulnerability/: main.py  none-vulnerability.py
examples/03-sign-key/: main.py  sign-key.py
examples/04-brute-force/: brute-force.py  main.py
examples/05-rsa-hmac-confusion/: main.py  public.pem  rsa-hmac-confusion.py
examples/06-kid-injection/: kid-injection.py  main.py
examples/07-jku-bypass/: jku-bypass.py  main.py
examples/08-x5u-bypass/: main.py  x5u-bypass.py
myjwt/: Exception.py  __init__.py  modify_jwt.py  myjwt_cli.py  user_interface.py  utils.py  variables.py  vulnerabilities.py
tests/: test_modifyJWT.py  test_modify_jwt.py  test_myjwt_cli.py  test_utils.py  test_vulnerabilities.py
wordlist/: big.txt  common_pass.txt  dict.txt
