[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.poetry]
name = "myjwt"
version = "1.6.0"
description = ""
authors = ["mBouamama <matthieubouamama@gmail.com>"]
readme = "README.md"
packages = [{include = "myjwt"}]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
colorama = "^0.4.6"
cryptography = "^39.0.2"
exrex = "^0.11.0"
pyopenssl = "^23.0.0"
pyperclip = "^1.8.2"
questionary = "^1.10.0"
requests = "^2.28.2"

[tool.poetry.group.dev.dependencies]
coverage = "^7.2.1"
pytest = "^7.2.2"
pytest-mock = "^3.10.0"
requests-mock = "^1.10.0"


[tool.poetry.group.lint.dependencies]
docstr-coverage = "^2.2.0"
flake8 = "^6.0.0"
pre-commit = "^3.1.1"
